apps/uptime/mariadb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-mariadb
spec:
  type: ClusterIP
  selector:
    component: mariadb
  ports:
    - name: 3306-tcp
      port: 3306
      targetPort: 3306
      protocol: TCP
