apps/uptime/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-svc
spec:
  selector:
    component: kuma
  ports:
    - name: 80-tcp
      port: 80
      targetPort: 3001
