apps/uptime/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/websocket: "true"
    traefik.ingress.kubernetes.io/router.middlewares: security-redirect-https@kubernetescrd
    traefik.ingress.kubernetes.io/websocket-timeout: "600s"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: uptime.home.arpa  # cluster-specific: NETWORK_HOSTNAME_SUFFIX
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: uptime-svc
                port:
                  name: 80-tcp
  tls:
    - secretName: uptime-tls
      hosts:
        - uptime.home.arpa  # cluster-specific: NETWORK_HOSTNAME_SUFFIX
